# mlkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: .env.example  evaluation_example.py  inference_example.py  test.py  train_example.py
examples/config/: evaluation.yaml  inference.yaml  train.yaml
src/mlkit/: __init__.py  base.py  configs.py  logger.py  metrics_logger.py  trainer.py  utils.py  wandb_logger.py
src/mlkit/loggers/: logger.py  metrics_logger.py  wandb_logger.py
src/mlkit/utils/: ddp_utils.py  trainer_utils.py
