[tool.poetry]
name = "mlkit"
version = "0.1.0"
description = "A package for PyTorch ML"
authors = []
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.1"
numpy = "^1.26.4"
wandb = "^0.16.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
